manifests/user/firefly/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: firefly
  name: firefly
  namespace: firefly
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: firefly
  template:
    metadata:
      labels:
        app: firefly
    spec:
      containers:
      - name: firefly
        image: jc5x/firefly-iii:release-4.7.17
        resources:
          limits:
            cpu: 200m
            memory: 512Mi
          requests:
            cpu: 10m
            memory: 128Mi
        volumeMounts:
          - mountPath: /var/www/firefly-iii/storage/export
            name: firefly-export
          - mountPath: /var/www/firefly-iii/storage/upload
            name: firefly-upload
      volumes:
        - name: firefly-export
          persistentVolumeClaim:
            claimName: firefly-export-pvc
        - name: firefly-upload
          persistentVolumeClaim:
            claimName: firefly-upload-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: firefly
  name: firefly-svc
  namespace: firefly
spec:
  ports:
  - port: 80
  selector:
    app: firefly
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: firefly
  name: firefly-ingress
  namespace: firefly
spec:
  rules:
  - host: money.underyx.me
    http:
      paths:
      - backend:
          serviceName: firefly-svc
          servicePort: 80
        path: /
  tls:
    - hosts:
      - money.underyx.me
      secretName: firefly-tls
